<resources>
    <string name="app_name">Overwork_test</string>
    <string name="finish_test_tv">7. Нажмите \"Ввод\". Тест завершен!</string>
    <string name="titleMain">Тест утомленности</string>
    <string name="testInfo">Для прохождения теста заполните поля:</string>
    <string name="inf1">Займите положение лежа и не двигайтесть 5 минут</string>
    <string name="inf2">Займите статичное положение стоя в течение 5 минут</string>
    <string name="sex">1-М 2-Ж</string>
</resources>