<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="ShowResults"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/HeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/titleMain"
            android:textColor="@color/red" />

        <TextView
            style="@style/QuizStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="20dp"
            android:layout_weight="0.4"
            android:text="@string/testInfo" />

        <TextView
            style="@style/QuizStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Дата рождения" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/QuizStyle"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="15dp"
                android:maxLines="1"
                android:text="День:" />

            <EditText
                android:id="@+id/day"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="2"
                android:maxLines="1"
                android:minHeight="48dp"
                android:text="1"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                style="@style/QuizStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="10dp"
                android:maxLines="1"
                android:text="Месяц:" />

            <EditText
                android:id="@+id/month"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="2"
                android:maxLines="1"
                android:minHeight="48dp"
                android:text="12"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                style="@style/QuizStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:maxLines="1"
                android:text="Год:" />

            <EditText
                android:id="@+id/year"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="4"
                android:maxLines="1"
                android:minHeight="48dp"
                android:text="2000"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                style="@style/QuizStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="15dp"
                android:maxLines="1"
                android:text="Пол:   " />

            <EditText
                android:id="@+id/sex"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="2"
                android:maxLines="1"
                android:minHeight="48dp"
                android:text="1"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="15dp"
                android:maxLines="1"
                android:text="@string/sex" />

        </LinearLayout>

        <TextView
            style="@style/QuizStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inf1"
            android:textSize="12sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView7"
                    style="@style/QuizStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Давление лежа" />

                <EditText
                    android:id="@+id/up"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:maxLength="2"
                    android:maxLines="1"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </TableRow>
        </TableLayout>

        <TextView
            style="@style/QuizStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inf2"
            android:textSize="12sp" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView14"
                    style="@style/QuizStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Давление стоя" />

                <EditText
                    android:id="@+id/down"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:maxLength="2"
                    android:maxLines="1"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="ShowResults"
            android:text="Send" />


    </LinearLayout>
</ScrollView>